# etlx-wrapper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
etlx/: __init__.py
etlx_wrapper/: __init__.py
